k8s/004-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: burry
spec:
  ports:
    - name: http-front
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app-front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: burry
spec:
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
    spec:
      containers:
      - name: front
        image: siropops/burry-front:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
