k8s/005-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-front
  namespace: burry
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<IP>`)
    kind: Rule
    services:
    - name: front
      port: 80
